WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
222684
[css-flexbox] Fix mainAxisLengthIsDefinite for orthogonal items with percentage sizes
https://bugs.webkit.org/show_bug.cgi?id=222684
Summary
[css-flexbox] Fix mainAxisLengthIsDefinite for orthogonal items with percenta...
Sergio Villar Senin
Reported
2021-03-03 13:35:09 PST
[css-flexbox] Fix mainAxisLengthIsDefinite for orthogonal items with percentage sizes
Attachments
Patch
(4.64 KB, patch)
2021-03-03 13:41 PST
,
Sergio Villar Senin
jfernandez
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sergio Villar Senin
Comment 1
2021-03-03 13:41:39 PST
Created
attachment 422146
[details]
Patch
Javier Fernandez
Comment 2
2021-03-04 06:59:43 PST
Comment on
attachment 422146
[details]
Patch r=me
Sergio Villar Senin
Comment 3
2021-03-05 02:54:55 PST
Committed
r273958
(
234906@main
): <
https://commits.webkit.org/234906@main
>
Radar WebKit Bug Importer
Comment 4
2021-03-05 02:55:20 PST
<
rdar://problem/75087321
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug